# MedScanner

./: README.md  app.py  main.py  messages.pot  models.py  pyproject.toml  pytest.ini  routes.py  run_tests.py
static/css/: style.css
static/js/: main.js  scan.js
templates/: 404.html  500.html  base.html  dashboard.html  dosage.html  index.html  interactions.html  inventory.html  login.html  profile.html  public_interactions.html  register.html  reports.html  scan.html
tests/: README.md  __init__.py  conftest.py  test_models.py  test_routes.py  test_utils.py
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/vi/LC_MESSAGES/: messages.mo  messages.po
utils/: dosage.py  drug_interaction.py  inventory.py  ocr.py
