[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.40",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "flask-babel>=4.0.0",
    "openai>=1.78.1",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
]
